don't forget the formula cell style during xls/xlsx export, fdo#66242

This reverts parts of commit 64223bda068cc6d82d3c5e359d465014568398bb.

Change-Id: I6d5379aaedbf011b39a4cf076f0a43bc8a6cbc93